// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for toplyne destination: sendAccountProfiles action - all fields 1`] = `
Object {
  "accounts": Array [
    Object {
      "accountId": "7wblbEGA$r74g8(LKHUU",
      "accountProperties": Object {
        "testType": "7wblbEGA$r74g8(LKHUU",
      },
      "creationTime": null,
      "enable_batching": false,
    },
  ],
}
`;

exports[`Testing snapshot for toplyne destination: sendAccountProfiles action - required fields 1`] = `
Object {
  "accounts": Array [
    Object {
      "accountId": "7wblbEGA$r74g8(LKHUU",
      "creationTime": null,
    },
  ],
}
`;

exports[`Testing snapshot for toplyne destination: sendEvents action - all fields 1`] = `
Object {
  "events": Array [
    Object {
      "accountId": "(iRWTeAl",
      "enable_batching": true,
      "eventName": "(iRWTeAl",
      "eventProperties": Object {
        "testType": "(iRWTeAl",
      },
      "timestamp": 1612137600,
      "userId": "(iRWTeAl",
    },
  ],
}
`;

exports[`Testing snapshot for toplyne destination: sendEvents action - required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "(iRWTeAl",
      "timestamp": 1612137600,
      "userId": "(iRWTeAl",
    },
  ],
}
`;

exports[`Testing snapshot for toplyne destination: sendUserProfiles action - all fields 1`] = `
Object {
  "profiles": Array [
    Object {
      "creationTime": null,
      "enable_batching": true,
      "userId": "UdCNQTigkp",
      "userProperties": Object {
        "testType": "UdCNQTigkp",
      },
    },
  ],
}
`;

exports[`Testing snapshot for toplyne destination: sendUserProfiles action - required fields 1`] = `
Object {
  "profiles": Array [
    Object {
      "creationTime": null,
      "userId": "UdCNQTigkp",
    },
  ],
}
`;
